--- a/site/index.html
+++ b/site/index.html
@@ -13,7 +13,10 @@
 </head>
 
 <body>
+  <div id="console"></div>
+  
+  <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
   <script src="js/bundle.js"></script>
-  <script src="http://localhost:8080/skewer"></script>
 </body>
 </html>
